force-app/main/default/objects/BMCServiceDesk__BMC_UPS__c/BMCServiceDesk__BMC_UPS__c.object-meta.xml
<CustomObject>
    <description>BMC_UPS. CMDB Class that stores information about uninterruptible power supply (UPS) systems, which maintain power for your organization and its systems during power outages. This class has no corresponding DMTF CIM class.</description>
    <label>UPS</label>
    <nameField>
        <label>UPS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UPS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>