force-app/main/default/objects/BMCServiceDesk__BMC_UPS__c/fields/BMCServiceDesk__Input_Voltage__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Input_Voltage__c</fullName>
    <label>Input Voltage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Range 1</fullName>
            </value>
            <value>
                <fullName>Range 2</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Neither</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>