force-app/main/default/objects/BMCServiceDesk__BMC_UPS__c/fields/BMCServiceDesk__Total_Output_Power__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Total_Output_Power__c</fullName>
    <label>Total Output Power</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>