force-app/main/default/objects/BMCServiceDesk__BMC_UPS__c/fields/BMCServiceDesk__Type_Of_Range_Switching__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Type_Of_Range_Switching__c</fullName>
    <label>Type Of Range Switching</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Autoswitch</fullName>
            </value>
            <value>
                <fullName>Wide Range</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>