force-app/main/default/objects/BMCServiceDesk__BMC_UPS__c/fields/BMCServiceDesk__UPS_Port__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__UPS_Port__c</fullName>
    <label>UPS Port</label>
    <length>15</length>
    <type>Text</type>
</CustomField>